--- a/package.json
+++ b/package.json
@@ -8,17 +8,38 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@quasar/extras": "^1.0.0",
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "quasar": "^2.0.0",
+    "vue": "^3.1.5",
+    "vue-axios": "^3.2.4",
+    "vue-material": "^1.0.0-beta-15",
+    "vue-property-decorator": "^9.1.2",
+    "vue-router": "^4.0.0-0"
   },
   "devDependencies": {
+    "@types/vue-material": "git+https://github.com/calebsander/vue-material-types.git",
+    "@typescript-eslint/eslint-plugin": "^4.18.0",
+    "@typescript-eslint/parser": "^4.18.0",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-router": "^4.5.13",
+    "@vue/cli-plugin-typescript": "^4.5.13",
     "@vue/cli-service": "~4.5.0",
+    "@vue/compiler-sfc": "^3.0.0-beta.1",
+    "@vue/eslint-config-typescript": "^7.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11"
+    "eslint-plugin-vue": "^7.0.0-alpha.0",
+    "postcss-rtl": "^1.2.3",
+    "sass": "1.32.12",
+    "sass-loader": "^10.1.0",
+    "typescript": "~4.1.5",
+    "vue-cli-plugin-axios": "0.0.4",
+    "vue-cli-plugin-quasar": "~4.0.1",
+    "vue-cli-plugin-vue-next": "~0.1.4",
+    "vue3-material": "^1.0.8"
   },
   "eslintConfig": {
     "root": true,
@@ -26,11 +47,12 @@
       "node": true
     },
     "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
+      "plugin:vue/vue3-essential",
+      "eslint:recommended",
+      "@vue/typescript"
     ],
     "parserOptions": {
-      "parser": "babel-eslint"
+      "parser": "@typescript-eslint/parser"
     },
     "rules": {}
   },
